--- a/aula 06/ex002.html
+++ b/aula 06/ex002.html
@@ -1,4 +1,4 @@
-<!-- 💛 Exercicio 001 de JavaScript -->
+<!-- 💛 Tratamento de Dados -->
 
 <!DOCTYPE html>
 <html lang="pt-br">
@@ -21,9 +21,8 @@
     <h1>Olá, Mundo!</h1>
     <p>Meu primeiro programa em JavaScript</p>
     <script> // Essa é a tag do JavaScript
-        window.alert('Minha primeira mensagem!') // Essa função mostra uma caixa de alerta
-        window.confirm('Está gostando de JavaScript?') // Essa função mostra uma caixa de confirmação com botões OK/Cancelar
-        window.prompt('Qual é o seu nome?') // Essa função mostra uma caixa de prompt/texto para o usuário digitar
+        var nome = window.prompt('Qual é o seu nome?') // Como ler: Variável nome recebe o resultado do prompt 
+        window.alert('Seja bem-vindo, ' + nome) 
     </script>   
 </body>
 </html>
